--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # sass caches #
 .sass-cache
+
+# static cruft #
 _static-build/assets/
 _static-build/style/
+app/static/assets/
+app/static/style/
 
 # python #
 __pycache__/
