--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mistune==0.7.2
 SQLAlchemy==1.0.12
 Werkzeug==0.11.8
+wheel==0.24.0
