Stop tracking static reference build

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 .sass-cache
 
 # static cruft #
-_static-build/assets/
-_static-build/style/
+_static-build/
 app/static/assets/
 app/static/style/*
 
