--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 mistune==0.7.2
+psycopg2==2.6.1
 SQLAlchemy==1.0.12
 Werkzeug==0.11.8
 wheel==0.24.0
