--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==0.10.1
+Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
@@ -8,3 +10,4 @@ psycopg2==2.6.1
 SQLAlchemy==1.0.12
 Werkzeug==0.11.8
 wheel==0.24.0
+WTForms==2.1
