--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 mistune==0.7.2
-#psycopg2==2.6.1
+psycopg2==2.6.1
 SQLAlchemy==1.0.12
 uWSGI==2.0.12
 Werkzeug==0.11.8
