Attempt (and fail, so far) to get a networked docker db container up

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:trusty
 
 RUN apt-get update
 
-# Postgres
+# set up our app's database user
 RUN apt-get install -y postgresql postgresql-client postgresql-contrib libpq-dev
 USER postgres
 RUN /etc/init.d/postgresql start &&\
@@ -10,4 +10,10 @@ RUN /etc/init.d/postgresql start &&\
     createdb -E utf-8 -O tdw tdw -T template0
 USER root
 
-#CMD service nginx start && uwsgi --ini uwsgi.ini
+# allow remote connections to the database
+RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.3/main/pg_hba.conf
+RUN echo "listen_addresses='*'" >> /etc/postgresql/9.3/main/postgresql.conf
+
+EXPOSE 5432
+
+CMD service postgresql start
