Finish connecting web container to db container

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ app/static/style/*.css*
 uploads/*.png
 uploads/*.jpg
 uploads/*.jpeg
+app/static/uploads/*.png
+app/static/uploads/*.jpg
+app/static/uploads/*.jpeg
 
 # python #
 __pycache__/
