--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,19 +1,18 @@
 FROM ubuntu:trusty
 
 RUN apt-get update
-
-# set up our app's database user
-RUN apt-get install -y postgresql postgresql-client postgresql-contrib libpq-dev
-USER postgres
-RUN /etc/init.d/postgresql start &&\
-    psql --command "CREATE USER tdw WITH CREATEDB PASSWORD 'tdw'" &&\
-    createdb -E utf-8 -O tdw tdw -T template0
-USER root
+RUN apt-get install -y python-software-properties software-properties-common postgresql-9.3 postgresql-client-9.3 postgresql-contrib-9.3 libpq-dev
 
 # allow remote connections to the database
 RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.3/main/pg_hba.conf
 RUN echo "listen_addresses='*'" >> /etc/postgresql/9.3/main/postgresql.conf
 
+# set up our app's database user
+USER postgres
+RUN /etc/init.d/postgresql start &&\
+    psql --command "CREATE USER tdw WITH CREATEDB PASSWORD 'tdw'" &&\
+    createdb -E utf-8 -O tdw tdw -T template0
+
 EXPOSE 5432
 
-CMD service postgresql start
+CMD ["/usr/lib/postgresql/9.3/bin/postgres", "-D", "/var/lib/postgresql/9.3/main", "-c", "config_file=/etc/postgresql/9.3/main/postgresql.conf"]
