--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
          - '80:80'
         volumes:
          - ./uploads:/whiskey-blog/app/static/uploads
+         - ./app:/whiskey-blog/app
         depends_on:
          - db
     db:
