Use https via letsencrypt for this domain

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,12 @@ services:
         restart: always
         ports:
          - '80:80'
+         - '443:443'
         volumes:
          - ./app:/whiskey-blog/app
+         - /usr/share/nginx/html:/usr/share/nginx/html
+         - /etc/letsencrypt:/etc/letsencrypt
+         - /etc/ssl/certs:/etc/ssl/certs
         depends_on:
          - db
     db:
