--- a/nginx.conf
+++ b/nginx.conf
@@ -20,9 +20,24 @@ http {
 
     server {
 
-        listen 80;
+        listen 443 ssl;
         charset utf-8;
         client_max_body_size 10M;
+
+        server_name timdrinkswhiski.es www.timdrinkswhiski.es;
+
+        ssl_certificate /etc/letsencrypt/live/timdrinkswhiski.es/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/timdrinkswhiski.es/privkey.pem;
+ 
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_dhparam /etc/ssl/certs/dhparam.pem;
+        ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        add_header Strict-Transport-Security max-age=15768000;
 
         # Settings to by-pass for static files
         location ^~ /static  {
@@ -48,5 +63,11 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
 
         }
+    }
+
+    server {
+        listen 80;
+        server_name timdrinkswhiski.es www.timdrinkswhiski.es;
+        return 301 https://$host$request_uri;
     }
 }
