Add a robots.txt to disallow parameter crawling

--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,11 @@ http {
             root /app/static/favicons/favicon.ico;
         }
 
+        # Serve robots outside static dir.
+        location = /robots.txt  {
+            root /app/static/robots.txt;
+        }
+
         # Proxying connections to application servers
         location / {
 
