--- a/nginx.conf
+++ b/nginx.conf
@@ -47,12 +47,14 @@ http {
 
         # Serve favicon outside static dir.
         location = /favicon.ico  {
-            root /app/static/favicons/favicon.ico;
+            include /etc/nginx/mime.types;
+            alias /whiskey-blog/app/static/favicons/favicon.ico;
         }
 
         # Serve robots outside static dir.
         location = /robots.txt  {
-            root /app/static/robots.txt;
+            include /etc/nginx/mime.types;
+            alias /whiskey-blog/app/static/robots.txt;
         }
 
         # Proxying connections to application servers
